<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single"/>
    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:checked="true"
        android:title="@string/titleHome" />

    <item
    android:id="@+id/offers"
    android:icon="@drawable/offers"
    android:title="@string/titleComplaintsAndOffers" />



    <item
    android:id="@+id/location"
    android:icon="@drawable/location"
    android:title="@string/titleOutCafes" />

    <item
    android:id="@+id/share"
    android:icon="@drawable/share"
    android:title="@string/titleShare" />

    <item
        android:id="@+id/Login"
        android:icon="@drawable/login"
        android:title="@string/titleLogin" />

    <item
        android:id="@+id/Logout"
        android:icon="@drawable/logout"
        android:title="@string/titleLogout" />


</menu>